# categories-service

./: Cargo.toml  Dockerfile  README.md  categories.toml
.sqlx/: query-07106026b3133f4025c4b6e9f9d7c3da5039dc2c8f73c598fcf9c54aedc8a279.json  query-0ba84aef8e33d8528689024c2f48ca768736e559e2a784f8fc717f25f629f0f2.json  query-123dcab7311a98c0b46de99c6bf3c545895a257077377d87999bce612f8bff09.json  query-15a760f262332baecce1470a2272bed228890d9057a669c5d3e7a1c8f9ae8dce.json  query-1f9e7a8eb662e79b86133f46f22944a28db870b670a94fa68d5c7de2e5c07dcb.json  query-28832ada785511f725d4fb446c18f5333c27efd0df8a1fb3924c7d0a77470962.json  query-2bca5a60587c3c8d158980f5958dce3cfd63cc42bfaca324e3b4d7a81de3ce2e.json  query-440212a79a4b9887ccfc625493e1558ab8059d7065e39ba1f9885c65ce068148.json  query-539062eae253a3555d3de297a7891a982104e3c085145ac0713c49e91e31fa32.json  query-5687825c194e6fb77241cfdaeb0e3eccfe397aa9393c748ef10af5b2c726de74.json  query-5d50d096cd27ecc88b0520e3af214cef761181a719682d7ab691588d93d91318.json  query-638c84c03a1671662af8d475be4a1058126e2c14b2d8cbd73c10f1293e3c26ca.json  query-770e68a64e2be4e207ff09821d85b7707ffbfbc03f3b7244c8cfab7f9ecd08e1.json  query-77417337bbbcfe3dbce21d1e35a919ff18c38545eee6e7408463e01413f432d6.json  query-794104ee2152c8044e884dced039888e548443112c6b30d2a406cd1ad31516a0.json  query-7f9f6b8d07fe549ef6142ab02db3156aa1859a2a0066f46c12643e9452579a93.json  query-8c26e98386ce6b5afa54684526f4c6fb34a9f3f787c4bc69e0e412df4d15e3c5.json  query-8ebc4e282d94123f172eb6867f3d8392b5877eb3f8de5f1b183993fe8582632d.json  query-905e877135b7d019804102ecfd44f31ac4efa5d11733f5097d5e7f3276a10f55.json  (+17 more)
contrib/: compose.yaml
src/: entity.rs  lib.rs  (+3 more)
(+17 files in other folders)
